--- a/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/CatalogueTous.cshtml
@@ -75,7 +75,7 @@
 
             @if (logo != "none")
             {
-                <img src="~/Logo/@logo" alt="@logo" width="40" height="40" />
+                <img src="~/data/images/@logo" alt="@logo" width="40" height="40" />
             }
                 </div>
 
@@ -173,8 +173,8 @@
                                     <h5 class="card-text float-end" style="color: orangered; font-size:15px">Nouveau !</h5>
                                 }
                                 @{
-                                    var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
-                                    string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
+                                    var path = System.IO.Path.Combine(env.WebRootPath, "data/images", item.Photo);
+                                    string imagePath = item.Photo != null && File.Exists(path) ? $"~/data/images/{item.Photo}" : "~/data/images/DefaultImage.png";
                                     Console.WriteLine("FILE Name : " + item.Photo);
                                     Console.WriteLine("FILE : " + File.Exists(path));
                                 }
