--- a/Projet Web Commerce/Views/Shared/MenuMessagerie.cshtml
+++ b/Projet Web Commerce/Views/Shared/MenuMessagerie.cshtml
@@ -40,7 +40,7 @@
     <li class="nav-item ms-auto">
         <a class="nav-link border-bottom-0 border-3 @(Model == "EnvoyerMessage" ? "active" : "pasActif")" style="border-color: rgb(124, 105, 146)"
            asp-area="" asp-controller="Messagerie" asp-action="EnvoyerMessage">
-            <img src="~/Logo/pen.svg" />
+            <img src="~/data/images/pen.svg" />
         </a>
     </li>
 </ul>
