--- a/Projet Web Commerce/Views/PPProduits/Index.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Index.cshtml
@@ -67,7 +67,7 @@
 
             @if (logo != "none")
             {
-                <img src="~/Logo/@logo" alt="@logo" width="40" height="40" />
+                <img src="~/data/images/@logo" alt="@logo" width="40" height="40" />
             }
             </div>
 
@@ -79,8 +79,8 @@
             {
                 <div class="card" style="width:320px; margin: 10px;background-color:@backgroundCard">
                     @{
-                        var path = System.IO.Path.Combine(env.WebRootPath, "Logo", item.Photo);
-                        string imagePath = item.Photo != null && File.Exists(path) ? $"~/Logo/{item.Photo}" : "~/Logo/DefaultImage.png";
+                        var path = System.IO.Path.Combine(env.WebRootPath, "data/images", item.Photo);
+                        string imagePath = item.Photo != null && File.Exists(path) ? $"~/data/images/{item.Photo}" : "~/data/images/DefaultImage.png";
                         Console.WriteLine("FILE Name : " + item.Photo);
                         Console.WriteLine("FILE : " + File.Exists(path));
                     }
@@ -122,7 +122,14 @@
                            class="btn btn-secondary mt-auto" style="background-color:#808080; color: #FFFFFF; margin-bottom:10px; margin-right:10px">
                             Évaluations
                         </a>
-                        <b>@System.Math.Round(_context.PPEvaluations.Where(e => e.NoProduit == item.NoProduit).Average(a => a.Cote), 2) étoiles!</b>
+                        @if (_context.PPEvaluations.Where(e=>e.NoProduit == item.NoProduit).ToList().Count > 0)
+                        {
+                            <b>@System.Math.Round(_context.PPEvaluations.Where(e => e.NoProduit == item.NoProduit).Average(a => a.Cote), 2) étoiles!</b>
+                        }
+                        else
+                        {
+                            <b>Aucune évaluations!</b>
+                        }
                         <div>
                             <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.NoProduit">Modifier</a>
                             <a> | </a>
