--- a/Projet Web Commerce/Views/Personnaliser/Index.cshtml
+++ b/Projet Web Commerce/Views/Personnaliser/Index.cshtml
@@ -77,7 +77,7 @@ else
                         <div class="form-group">
                             @if (logo != "none")
                             {
-                                <img src="~/Logo/@logo" alt="@logo" width="140" height="140" />
+                                <img src="~/data/images/@logo" alt="@logo" width="140" height="140" />
                             }
                             else
                             {
