--- a/Projet Web Commerce/Views/PPProduits/SupprimerPanier.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/SupprimerPanier.cshtml
@@ -157,7 +157,7 @@ else
                                                     </h6>
                                                     <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
 
-                                                        @if (item.PrixVente != null && item.DateVente > DateTime.Now())
+                                                        @if (item.PrixVente != null && item.DateVente > DateTime.Now)
                                                         {
                                                             var prix = item.PrixVente * client.TotalItems;
                                                             <h6 class="col-md-12 col-lg-12 col-xl-12">
