--- a/Projet Web Commerce/Views/Messagerie/Details.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/Details.cshtml
@@ -67,6 +67,12 @@
                         @Model.Message
                     </div>
                     <br />
+                    @if (Model.PieceJointe != null)
+                    {
+                        @* <embed id="pieceJointe" name="pieceJointe" src="@Model.PieceJointe"/> *@
+                        <a href="@Url.Action("TelechargerPieceJointe", "Messagerie", new { cheminFichier = Model.PieceJointe })">Télécharger le fichier</a>
+                    }
+                    <br />
                     @if (ViewBag.destinataire != null && ViewBag.destinataire.Statut == -1)
                     {
                         <div class="card-footer" style="height: 55px;">
@@ -79,10 +85,6 @@
                             <button class="btns" onclick="repondre('@Model.NoMessage')">Répondre</button>
                             <button class="btns" onclick="transferer('@Model.NoMessage', '@ViewBag.UtilisateurCourantId')">Transférer</button>
                         </div>
-                    }
-                    @if (Model.PieceJointe != null)
-                    {
-                        <embed id="pieceJointe" name="pieceJointe" src="@Model.PieceJointe"/>
                     }
                 </div>
             </div>
