--- a/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
+++ b/Projet Web Commerce/Views/Messagerie/EnvoyerMessage.cshtml
@@ -136,7 +136,7 @@
                 @Html.Partial("MenuMessagerie", "EnvoyerMessage")
             </div>
             <div class="card">
-                <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email"> <!-- onsubmit="return soumettreForm()" -->
+                <form id="frmCourriel" method="post" asp-route-envoyeur="@user.Email" enctype="multipart/form-data"><!-- onsubmit="return soumettreForm()" -->
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center">
                             <h2 class="card-title">Envoyer un message</h2>
